--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </form>
     </div>
 
-    <script src="send.js"></script>
+    <script src="scripts/send.js"></script>
 </body>
 
 </html>
