--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Todos</title>
+    <link rel="shortcut icon" type="image/png" href="/image/to-do-list.png">
 </head>
 
 <body>
